# nearnauts

./: .gitignore  ContractDeploy.MD  README.md  package.json
contract/: Cargo.toml  build.sh  workspace.code-workspace
contract/market-simple/: compile.js
contract/market-simple/src/: external.rs  internal.rs  lib.rs  nft_callbacks.rs  sale.rs  sale_views.rs
contract/src/: approval.rs  enumeration.rs  event.rs  internal.rs  lib.rs  mint.rs  nft_core.rs  royalty.rs
src/components/pages/mint/steps/: MintDescribe.js
